# WasmEdge

.github/workflows/: build.yml
bindings/java/wasmedge-jni/: CMakeLists.txt
docs/book/en/src/: SUMMARY.md
lib/api/: CMakeLists.txt  wasmedge.cpp
lib/vm/: vm.cpp
tools/wasmedge/: wasmedger.cpp
